@@ -1,3 +1,12 @@
+2010-08-21  Stas Boukarev  <stassats@gmail.com>
+
+	* slime.el (slime-recompute-modelines): Recompute modelines only
+	for visible buffers. Kludge: modeline can be out of sync if the buffer
+	becomes visible and no slime/lisp interaction took place yet.
+	Patch by Raymond Toy.
+	(slime-search-buffer-package): Revert, with the above
+	change caching shouldn't be necessary.
+
 2010-08-21  Helmut Eller  <heller@common-lisp.net>
 
 	Add commands to enable/disable contribs.
